# QR

./: CMakeLists (Копия).txt  CMakeLists.txt  CMakeLists_OLD.txt  CMakeLists_old.txt  FileCopying.cpp  FileCopying.hpp  FileWatcher.cpp  FileWatcher.hpp  README.md  a.out  example  input.json  main.cpp  settings.md
data/: readme  readme.md
data/resource/: a.out
header/: Application.hpp  FileCopyManager.hpp  FileCopying.hpp  FileWatcher.hpp  InputData.hpp  QRImageProcessor.hpp  Random.hpp
resource/to/: some
source/: Application.cpp  FileCopyManager.cpp  FileCopying.cpp  FileWatcher.cpp  InputData.cpp  QRImageProcessor.cpp  Random.cpp
temp/: .clang-tidy  QRImageProcessor.cpp  _oldinput  a.out  compare.cpp  files.cpp  input_1.json  input_data.cpp  main  main.cpp  qr_and_sun.cpp  qr_sun_processor
temp/tests/: example  main.cpp
tests/: FileCopyingTests.cpp  a.out  json.cpp
